--- a/assets/Contact Me.html
+++ b/assets/Contact Me.html
@@ -9,8 +9,8 @@
     <h1>Contact Me</h1>
     <hr/>
     <p><b>Mobile number = </b>8109XXXXXX</p>
-    <p><b>Gmail = </b>abc@gmai.com</p>
-    <p><b>Instagram</b>rouge__121</p>
+    <p><b>Gmail = </b>abc@gmail.com</p>
+    <p><b>Instagram = </b>rouge__121</p>
     <p><b>Github_account = </b>Deshasa11</p>
 </body>
 </html>
